Deleteted max-width in the hero1

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -8,7 +8,6 @@
 
 .first-hero {
   color: var(--primary-white-color);
-  max-width: 414px;
   height: auto;
   margin-left: auto;
   margin-right: auto;
@@ -155,7 +154,7 @@
 .maps-link:focus {
   color: #000000;
   background-color: #f3c653;
-  opacity: 50%;
+  opacity: 40%;
 }
 
 .mimiho-soc-list {
@@ -192,22 +191,22 @@
 }
 
 /*---------------MEDIA------------ */
-@media screen and (min-width: 414px) {
+/* @media screen and (min-width: 414px) {
   .container {
     max-width: 384px;
   }
-}
+} */
 
 @media screen and (min-width: 1024px) {
   .first-hero > .container {
-    max-width: 1024px;
+    /* max-width: 1024px; */
     padding-top: 188px;
     padding-bottom: 15px;
     padding-left: 47px;
     padding-right: 47px;
   }
   .first-hero {
-    max-width: 1024px;
+    /* max-width: 1024px; */
     background-image: linear-gradient(
         to right,
         rgba(0, 0, 0, 0.65),
@@ -289,14 +288,14 @@
 
 @media screen and (min-width: 1280px) {
   .first-hero > .container {
-    max-width: 1140px;
+    /* max-width: 1140px; */
     padding-top: 164px;
     padding-bottom: 65px;
     padding-left: 85px;
     padding-right: 85px;
   }
   .first-hero {
-    max-width: 1140px;
+    /* max-width: 1140px; */
     background-image: linear-gradient(
         to right,
         rgba(0, 0, 0, 0.65),
