--- a/src/css/aboutrest.css
+++ b/src/css/aboutrest.css
@@ -90,15 +90,8 @@
 fill: var(--second-gold-color);
 }
 /* ------- Mob ------- */
-
-@media screen and (min-width: 320px) and (max-width: 413px) {
-  .about-rest {
-    width: 100%;
-  }
-}
-
 @media screen and (min-width: 414px) {
-  .about-res > .container {
+  .about-rest > .container {
     width: 414px;
   }
   .img-about-rest {
