--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -9,8 +9,8 @@
 .first-hero {
   color: var(--primary-white-color);
   height: auto;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
   background-color: rgba(0, 0, 0, 0.65);
   background-image: linear-gradient(
       to right,
@@ -199,7 +199,7 @@
 
 @media screen and (min-width: 1024px) {
   .first-hero > .container {
-    /* max-width: 1024px; */
+    max-width: 1024px;
     padding-top: 188px;
     padding-bottom: 15px;
     padding-left: 47px;
