--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -27,6 +27,10 @@
 }
 
 :root {
+/* --------Перший фон-------- */
+  --first-background-color: #FFFDEE;
+  /* -------Другий фон------- */
+  --second-background-color: #F0ECD6;
   /* Колір описових параграфів. */
   --primary-text-color: #7a7a7a;
   /* Золотий колір кнопок, посилань та логотипу. */
@@ -40,6 +44,7 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
+  background-color: var(--first-background-color);
 }
 
 .container {
@@ -230,7 +235,7 @@ body {
 }
 
 @media screen and (min-width: 1024px) {
-  .header > .container {
+  .container {
     width: 1024px;
     padding-left: 47px;
     padding-right: 47px;
@@ -300,7 +305,7 @@ body {
 }
 
 @media screen and (min-width: 1280px) {
-  .header > .container {
+  .container {
     width: 1280px;
     padding-left: 85px;
     padding-right: 85px;
