--- a/src/partials/luxe.html
+++ b/src/partials/luxe.html
@@ -110,7 +110,7 @@
 <div class="luxe-wrap">
         <a href="../room.html" class="luxe-btn">Детальніше</a>
 
-        <button type="button" class="luxe-btn">Переглянути ціни</button>
+        <button type="button" class="luxe-btn js-open-modal" data-modal="modalprice">Переглянути ціни</button>
 </div>
  
 </div>
