--- a/src/partials/room1.html
+++ b/src/partials/room1.html
@@ -108,7 +108,7 @@ Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit 
 <div class="room1-wrap">
         <a href="../room.html" class="room1-btn">Детальніше</a>
 
-        <button type="button" class="room1-btn">Переглянути ціни</button>
+        <button type="button" class="room1-btn js-open-modal" data-modal="modalprice">Переглянути ціни</button>
 </div>
  
 </div>
