--- a/src/css/room2.css
+++ b/src/css/room2.css
@@ -1,1 +1,263 @@
 /* <!-- -----------1 room for 2 adult----------- --> */
+.room2 {
+  background-color: #fffdee;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.room2 .container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+.room2-pre-title {
+  font-family: 'Times New Roman';
+  font-style: normal;
+  font-size: 20px;
+  line-height: 1.15;
+  color: #b4b4b4;
+
+  margin-bottom: 8px;
+}
+
+.room2-logo {
+  font-family: 'Film P3', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.08;
+  letter-spacing: 0.3em;
+  color: #494848;
+
+  margin-bottom: 32px;
+}
+
+.room2-title {
+  font-family: 'Times New Roman';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  color: #000000;
+
+  margin-bottom: 12px;
+}
+
+.room2-text {
+  max-width: 241px;
+
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+
+  margin-bottom: 32px;
+}
+
+.room2-img {
+  max-width: 244px;
+  max-height: 322px;
+  background-color: #dadada;
+  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  margin-left: auto;
+  overflow: hidden;
+  margin-bottom: 32px;
+}
+
+.room2-slaider-list {
+  display: flex;
+  gap: 16px;
+  margin-left: -15px;
+  margin-bottom: 20px;
+}
+.room2-slaider-item {
+  background-color: #dadada;
+  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  overflow: hidden;
+}
+.room2-arrow {
+  margin-bottom: 20px;
+}
+.room2-arrow-btn {
+  border: none;
+  background-color: transparent;
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  margin-right: 32px;
+}
+.room2-arrow-btn:last-child {
+  margin-right: 0;
+}
+
+.room2-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 16px;
+  width: 236px;
+  height: 48px;
+  background-color: #000000;
+  border: 2px solid #fffdee;
+  border-radius: 25px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: var(--second-gold-color);
+  transition: background-color var(--timing-function) , border-color var(--timing-function);
+}
+.room2-btn:last-child {
+  margin-bottom: 0;
+}
+.room2-btn:hover,
+.room2-btn:focus {
+  background-color: var(--primary-white-color);
+  border-color: var(--second-gold-color);
+}
+
+@media screen and (min-width: 414px) {
+  .room2 .container {
+    max-width: 414px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .room2 {
+    padding-top: 62px;
+    padding-bottom: 40px;
+  }
+  .room2 .container {
+    position: relative;
+    max-width: 1024px;
+    padding-left: 47px;
+    padding-right: 47px;
+  }
+  .room2-pre-title {
+    font-size: 32px;
+    margin-bottom: 4px;
+  }
+
+  .room2-logo {
+    font-size: 64px;
+    margin-bottom: 62px;
+  }
+
+  .room2-title {
+    font-size: 30px;
+    line-height: 1.13;
+
+    margin-bottom: 16px;
+  }
+
+  .room2-text {
+    max-width: 419px;
+
+    font-size: 16px;
+
+    margin-bottom: 176px;
+  }
+
+  .room2-img {
+    position: absolute;
+    top: -94px;
+    left: 512px;
+
+    max-width: 400px;
+    max-height: 528px;
+
+    box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
+    border-radius: 0;
+  }
+
+  .room2-slaider-list {
+    display: flex;
+    gap: 40px;
+    margin-left: 0;
+    margin-bottom: 32px;
+  }
+  .room2-slaider-item {
+    width: 194px;
+    height: 194px;
+    border-radius: 0;
+  }
+  .room2-arrow {
+    margin-bottom: 0;
+    margin-left: 330px;
+  }
+
+  .room2-wrap {
+    position: absolute;
+    right: 47px;
+    bottom: 105px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .room2 {
+    padding-top: 72px;
+  }
+  .room2 .container {
+    position: relative;
+    max-width: 1280px;
+    padding-left: 85px;
+    padding-right: 85px;
+  }
+
+  .room2-logo {
+    margin-bottom: 72px;
+  }
+
+  .room2-title {
+    font-size: 36px;
+
+    margin-bottom: 24px;
+  }
+
+  .room2-text {
+     max-width: 400px;
+    margin-bottom: 188px;
+  }
+
+  .room2-img {
+    position: absolute;
+    top: -105px;
+    left: 640px;
+
+    max-width: 460px;
+    max-height: 574px;
+
+    border-radius: 2px;
+  }
+
+  .room2-slaider-list {
+    display: flex;
+    gap: 40px;
+    margin-left: 0;
+    margin-bottom: 40px;
+  }
+  .room2-slaider-item {
+    width: 254px;
+    height: 254px;
+    border-radius: 2px;;
+  }
+  .room2-arrow {
+  margin-left: 457px;
+  }
+
+  .room2-wrap {
+    position: absolute;
+    right: 85px;
+    bottom: 142px;
+  }
+}
