--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -25,7 +25,8 @@
   visibility: hidden;
 
   /*  Установаем ширину окна  */
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   /*  Центрируем и задаем z-index */
   position: fixed;
   top: 50%;
@@ -63,14 +64,6 @@ select {
   background-image: url('../img/arrow-down-bold.svg');
 }
 
-.backdrop {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(96, 91, 91, 0.4);
-  transition: opacity var(--timing-function), visibility var(--timing-function);
-}
 
 .modal-container {
   width: 100vw;
