--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -4,7 +4,6 @@
   /* Скрываем подложку  */
   opacity: 0;
   visibility: hidden;
-  pointer-events: none;
 
   position: fixed;
 
@@ -69,9 +68,9 @@ select {
   width: 100vw;
 
   position: fixed;
-  top: 0;
+  /* top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 1; */
   width: 100vw;
   height: 100vh;
   padding: 0 15px;
