отображение "Х" по ссылке в GitHub

--- a/src/partials/modalprice.html
+++ b/src/partials/modalprice.html
@@ -4,7 +4,7 @@
   <div class="modal-container price-modal-wrap">
     <button type="button" class="modal-close js-modal-close">
       <svg class="modal-close-icon" width="24" height="24">
-        <use href="../img/icons.svg#modal-close"></use>
+        <use href="./img/icons.svg#modal-close"></use>
       </svg>
     </button>
 
