--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -177,7 +177,8 @@ select {
   margin-bottom: 20px;
 }
 
-.book-room-user-contacts .modal-input:first-child {
+/* .book-room-user-contacts .modal-input:first-child { */
+  .book-room-user-contacts > .modal-field:first-child > .modal-input {
   border-radius: 2px;
 }
 
