--- a/src/partials/modaltable.html
+++ b/src/partials/modaltable.html
@@ -3,7 +3,7 @@
   <div class="modal-container book-table">
     <button type="button" class="modal-close js-modal-close">
       <svg class="modal-close-icon" width="24" height="24">
-        <use href="../img/icons.svg#modal-close"></use>
+        <use href="./img/icons.svg#modal-close"></use>
       </svg>
     </button>
 
