--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,1 +1,234 @@
 /* <!-- ------------Restaurant Page Menu------------ --> */
+
+.restaurant-menu {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    background-color: #FFFDEE;
+}
+
+.restaurant-menu-container {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;    
+}
+
+.restaurant-menu-title {
+    margin-bottom: 16px;
+    font-family: 'Times New Roman', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 1.16;
+    color: #000000;
+}
+
+.table-two {
+    margin-bottom: 32px;
+}
+
+.restaurant-menu-table th {
+    padding: 16px 0;
+    text-align: left;
+    font-family: 'Times New Roman', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    color: #000000;
+}
+
+.restaurant-menu-cell1 {
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.21;
+    letter-spacing: 0.02em;
+    color: #000000;
+}
+
+.restaurant-menu-cell2 {
+    padding: 0 30px;
+    width: 113px;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 1.21;
+    letter-spacing: 0.02em;
+    color: #000000;
+}
+
+.restaurant-menu-cell3 {
+    padding: 0;
+    width: 64px;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.21;
+    letter-spacing: 0.02em;
+    color: #000000;
+}
+
+.restaurant-menu-cell4 {
+    padding: 4px 0 8px;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #000000;
+}
+
+.last-cell {
+    padding: 4px 0 0 0;
+}
+
+.another-cell {
+    padding: 0 0 11px 0;
+}
+
+.menu-restaurant-btn {
+    display: block;
+    margin: 0 auto;
+    min-width: 236px;
+    height: 48px;
+    background-color: #000000;
+    border: 2px solid #FFFDEE;
+    border-radius: 25px;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.02em;
+    color: var(--second-gold-color);
+    transition: background-color var(--timing-function), border var(--timing-function);
+}
+
+.menu-restaurant-btn:hover,
+.menu-restaurant-btn:focus {
+    background-color: var(--primary-white-color);
+    border: 2px solid var(--second-gold-color);
+}
+
+/*----MOBILE----*/
+@media screen and (min-width: 414px) {
+    
+    .restaurant-menu-container {
+      width: 414px;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+}
+
+/*----TABLET----*/
+@media screen and (min-width: 1024px) {
+    .restaurant-menu {
+        padding-top: 58px;
+        padding-bottom: 40px;
+        background-color: #F0ECD6;
+    }
+    
+    .restaurant-menu-container {
+      width: 1024px;
+      padding-left: 47px;
+      padding-right: 47px;
+    }   
+       
+    .restaurant-menu-title {
+        margin-bottom: 20px;
+    }
+
+    .tables {
+        display: flex;
+        gap: 88px;
+        margin-bottom: 89px;
+    }
+
+    .restaurant-menu-table {
+        display: inline-block;
+        width: calc((100% - 88px) / 2);
+        
+     }
+
+    .restaurant-menu-table th {
+        padding: 20px 0;
+    }
+    
+    .restaurant-menu-cell2 {
+        padding: 0 47px 0 40px;
+        width: 139px;
+    }
+    
+    .button-reserve {
+        position: relative;        
+    }  
+    
+    .menu-restaurant-btn {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+}
+
+/*----DESKTOP----*/
+@media screen and (min-width: 1280px) {
+    .restaurant-menu {
+        padding-bottom: 60px;
+    }
+
+    .restaurant-menu-container {
+      width: 1280px;
+      padding-left: 85px;
+      padding-right: 85px;
+    }
+
+    .tables {
+        gap: 140px;
+        margin-bottom: 80px;
+    }
+
+    .restaurant-menu-table {
+        width: calc((100% - 140px) / 2);
+        
+     }
+
+    .restaurant-menu-table th {
+        font-size: 24px;
+        line-height: 1.17;
+    }
+    
+    .restaurant-menu-cell1 {
+        font-size: 16px;
+        line-height: 1.25;
+    }
+    
+    .restaurant-menu-cell3 {
+        width: 71px;
+        font-size: 16px;
+        line-height: 1.25;
+    }
+    
+    .restaurant-menu-cell4 {
+        padding: 4px 0 12px;
+    }
+    
+    .last-cell {
+        padding: 4px 0 0 0;
+    }
+}
+/*
+Для перевірки таблиць
+
+table {
+    border-collapse: collapse;
+}
+
+td, th {
+    border: 1px solid #555555;
+    } */
