add details of hotel

--- a/src/css/amenities.css
+++ b/src/css/amenities.css
@@ -40,8 +40,11 @@
   color: var(--primary-text-color);
   margin-top: 16px;
 }
+.amenities-room-btn-link {
+}
 .amenities-button {
-  width: 100%;
+  width: 384px;
+  height: 64px;
   font-family: inherit;
   font-style: normal;
   font-weight: 500;
@@ -51,7 +54,7 @@
   background-color: #000000;
   border: 1px solid var(--second-gold-color);
   border-radius: 25px;
-  padding: 20px 43px;
+  padding: 0;
   margin-top: 32px;
   margin-bottom: 20px;
   cursor: pointer;
@@ -91,15 +94,9 @@
 }
 /* -----MOBILE----- */
 @media screen and (min-width: 414px) {
-  .container {
-    max-width: 414px;
-  }
 }
 /* -----TABLET----- */
 @media screen and (min-width: 1024px) {
-  .container {
-    max-width: 930px;
-  }
   .amenities {
     padding-top: 50px;
     padding-bottom: 40px;
@@ -118,30 +115,34 @@
     width: 400px;
     margin-top: 0;
   }
+  .amenities-room-btn-link {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
   .amenities-button {
     width: 434px;
+    height: 64px;
     font-size: 24px;
     line-height: 1.2;
-    padding: 18px 38px;
+    padding: 0;
     margin-top: 40px;
     margin-bottom: 32px;
-    margin-left: 496px;
   }
   .amenities-link-room {
-    margin-left: 497px;
+    width: 433px;
   }
   .amenities-link {
     position: relative;
     font-size: 20px;
     line-height: 1.2;
-    margin-right: 16px;
+    letter-spacing: 0.02em;
+    margin-right: 10px;
   }
 }
 /* -----DESKTOP----- */
 @media screen and (min-width: 1280px) {
-  .container {
-    max-width: 1110px;
-  }
   .amenities {
     padding-top: 48px;
     padding-bottom: 48px;
@@ -149,14 +150,9 @@
   .amenities-item-text {
     gap: 159px;
   }
-  .amenities-button {
-    margin-left: 562px;
-  }
-  .amenities-link-room {
-    width: 433px;
-    margin-left: 550px;
-  }
-  .amenities-link {
-    font-size: 22px;
+  .amenities-room-btn-link {
+    justify-content: center;
+    align-items: center;
+    margin-left: 475px;
   }
 }
