--- a/src/partials/amenities.html
+++ b/src/partials/amenities.html
@@ -66,14 +66,22 @@
         </p>
       </li>
     </ul>
-    <button type="button" class="amenities-button">ОФОРМИТИ БРОНЮВАННЯ</button>
-    <div class="amenities-link-room">
-      <a class="amenities-link" href="/src/hotel.html"
-        >Повернутися до перегляду номерів</a
+    <div class="amenities-room-btn-link">
+      <button
+        type="button"
+        class="amenities-button js-open-modal"
+        data-modal="modalroom"
       >
-      <svg class="amenities-icon" width="24" height="24">
-        <use href="./img/icons.svg#arrow-right"></use>
-      </svg>
+        ОФОРМИТИ БРОНЮВАННЯ
+      </button>
+      <div class="amenities-link-room">
+        <a class="amenities-link" href="./hotel.html"
+          >Повернутися до перегляду номерів</a
+        >
+        <svg class="amenities-icon" width="24" height="24">
+          <use href="./img/icons.svg#arrow-right"></use>
+        </svg>
+      </div>
     </div>
   </div>
 </section>
