--- a/src/partials/detailshotel.html
+++ b/src/partials/detailshotel.html
@@ -1,1 +1,118 @@
 <!-- ----------Details of our hotel---------- -->
+<section class="details-hotel">
+  <div class="container">
+    <p class="details-hotel-logo">MIMIHO</p>
+    <h2 class="details-hotel-title">Готель</h2>
+    <p class="details-hotel-text">
+      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+      Velit officia consequat duis enim velit mollit.
+    </p>
+    <ul class="details-hotel-list">
+      <li class="details-hotel-item">
+        <picture>
+          <source
+            srcset="
+              ../img/details-hotel/details-hotel-food.jpg    1x,
+              ../img/details-hotel/details-hotel-food-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ../img/details-hotel/details-hotel-food-tab.jpg    1x,
+              ../img/details-hotel/details-hotel-food-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ../img/details-hotel/details-hotel-food-mob.jpg    1x,
+              ../img/details-hotel/details-hotel-food-mob-2x.jpg 2x
+            "
+            media="(min-width: 320px)"
+          />
+          <img
+            class="details-hotel-img-food"
+            src="../img/details-hotel/details-hotel-food.jpg"
+            alt="food"
+            height="270"
+          />
+        </picture>
+      </li>
+      <li class="details-hotel-item">
+        <picture>
+          <source
+            srcset="
+              ../img/details-hotel/details-hotel-room.jpg    1x,
+              ../img/details-hotel/details-hotel-room-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ../img/details-hotel/details-hotel-room-tab.jpg    1x,
+              ../img/details-hotel/details-hotel-room-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <source
+            srcset="
+              ../img/details-hotel/details-hotel-room-mob.jpg    1x,
+              ../img/details-hotel/details-hotel-room-mob-2x.jpg 2x
+            "
+            media="(min-width: 320px)"
+          />
+          <img
+            class="details-hotel-img-room"
+            src="../img/details-hotel/details-hotel-room.jpg"
+            alt="room"
+            height="270"
+          />
+        </picture>
+      </li>
+
+      <li class="details-hotel-item">
+        <picture>
+          <source
+            srcset="
+              ../img/details-hotel/details-hotel-reception.jpg    1x,
+              ../img/details-hotel/details-hotel-reception-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ../img/details-hotel/details-hotel-reception-tab.jpg    1x,
+              ../img/details-hotel/details-hotel-reception-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)"
+          />
+          <img
+            class="details-hotel-img-reception"
+            src="../img/details-hotel/details-hotel-reception.jpg"
+            alt="reception"
+            height="270"
+          />
+        </picture>
+      </li>
+    </ul>
+    <div class="details-hotel-arrows">
+      <svg class="hotel-icon-arrow-left" width="32px" height="32px">
+        <use href="../img/icons.svg#arrow-left"></use>
+      </svg>
+      <svg class="hotel-icon-arrow-right" width="32px" height="32px">
+        <use href="../img/icons.svg#arrow-right"></use>
+      </svg>
+    </div>
+    <div class="details-hotel-btn-link">
+      <button
+        type="button"
+        class="details-hotel-button js-open-modal"
+        data-modal="modalroom"
+      >
+        Забронювати номер
+      </button>
+      <a class="details-hotel-link" href="./hotel.html">Переглянути ціни</a>
+    </div>
+  </div>
+</section>
