--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -1,7 +1,7 @@
 <!-- ------------Restaurant Page Menu------------ -->
 
 <section class="restaurant-menu">
-  <div class="restaurant-menu-container">
+  <div class="container">
     <h4 class="restaurant-menu-title">МЕНЮ РЕСТОРАНУ</h4>
 
     <div class="tables">
