--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,9 +1,12 @@
 /* <!-- -------- Hero -------- --> */
 
 .first-hero > .container {
-  width: 100%;
+  position: relative;
   padding-top: 181px;
   padding-bottom: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* margin: 0 auto; */
 }
 
 .first-hero {
@@ -58,10 +61,6 @@
       url(../img/hero1/pexels-chan-walrus-941861-mobile@2x.jpg);
   }
 }
-
-/* .first-hero > .container {
-  position: relative;
-} */
 
 .first-hero-title {
   font-family: 'Film P3';
