--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -268,7 +268,6 @@ body {
     display: block;
   }
   .header-box {
-    width: 144px;
     border: 1px solid rgba(243, 198, 83, 0.7);
     border-radius: 2px;
   }
@@ -285,9 +284,11 @@ body {
     align-items: start;
   }
   .footer-social-list {
-    display: block;
+    display: flex;
+    flex-direction: column-reverse;
     margin-top: 0;
     margin-left: 137px;
+    row-gap: 18px;
   }
   .footer-social-item {
     display: flex;
@@ -295,9 +296,6 @@ body {
     gap: 18px;
     border: 0.5px solid var(--second-gold-color);
     border-radius: 2px;
-  }
-  .footer-social-item:not(:last-child) {
-    margin-bottom: 12px;
   }
   .footer-social-link {
     display: flex;
