--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,7 @@
 <!-- ---------Contacts--------- -->
 
 <section class="main-contacts">
-  <div class="main-contacts-container">
+  <div class="container">
     <h3 class="visually-hidden">Контакти закладу</h3>
     <p class="main-contacts-name">MIMIHO</p>
     <p class="main-contacts-organization">Ресторанно-готельний комплекс</p>
