--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -6,14 +6,6 @@
     background: #FFFDEE
 }
 
-.main-contacts-container {
-    max-width: calc(384px + 30px);
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;    
-}
-
 .main-contacts-name {
     margin-bottom: 12px;
     font-family: 'Film P3', sans-serif;
@@ -61,7 +53,7 @@
 
 .main-contacts-tel {
     display: inline-flex;
-    padding: 9px 7px 7px;    
+    padding: 9px 8px 7px;    
     align-items: center;
     background-color: var(--primary-white-color);
     border: 0.5px solid var(--second-gold-color);
@@ -76,16 +68,15 @@
 }
 
 .contacts-tel1 {
-    min-width: 144px;
+    min-width: 150px;
     height: 40px;
 }
 
 .main-contacts-call {
-    display: flex;
-    flex-wrap: wrap;    
-    max-width: 262px;
-    justify-content: center;
-    background-color: var(--primary-white-color);
+    display: flex;  
+    flex-direction: column; 
+    align-items: flex-end;
+    min-width: 150px;
     border: 0.5px solid var(--second-gold-color);
     border-radius: 2px;
 }
@@ -95,20 +86,18 @@
 }
 
 .main-contacts-call > .contacts-tel2 {
-    min-width: 142px;
+    min-width: 146px;
     height: 40px;
-    padding-right: 0;
-    margin-right: 6px;
 }
 
 .main-contacts-call > .contacts-tel3 {
-    min-width: 110px;
+    min-width: 146px;
     height: 40px;
-    padding-left: 0;
+    justify-content: right;
 }
 
 .main-contacts-item svg {
-    margin-right: 6px;
+    margin-right: 8px;
     fill: var(--first-gold-color);
 }
 
@@ -149,9 +138,24 @@
 
 /*----MOBILE----*/
 @media screen and (min-width: 414px) {
-    .main-contacts-container {
-        width: calc(384px + 30px);
-    }    
+    .main-contacts-call {
+        display: inline-flex;
+        flex-direction: row;    
+        min-width: 260px;
+        gap: 8px;     
+    }
+    
+    .main-contacts-call > .contacts-tel2 {
+        min-width: 140px;
+        height: 40px;
+        padding-right: 0;
+    }
+    
+    .main-contacts-call > .contacts-tel3 {
+        min-width: 108px;
+        height: 40px;
+        padding-left: 0;
+    }     
 }
 
 /*----TABLET----*/
@@ -159,13 +163,6 @@
     .main-contacts {
         padding-top: 56px;
         padding-bottom: 40px;
-    }
-
-
-    .main-contacts-container {
-        min-width: 1024px;
-        padding-left: 47px;
-        padding-right: 47px;
     }
 
     .main-contacts-name {
@@ -179,7 +176,7 @@
         margin-bottom: 52px;
     }
 
-    .main-contacts-container {
+    .main-contacts > .container {
         position: relative;
     }
 
@@ -204,13 +201,11 @@
     .main-contacts-text {
         margin-bottom: 8px;
     }
-    
+
     .main-contacts-call {
-        max-width: 270px;
-    }
-    
-    .main-contacts-call > .contacts-tel2 {
-        margin-right: 16px;
+        min-width: 260px;
+        align-items: center;
+        gap: 16px;
     }
     
     .main-contacts-place {
@@ -225,6 +220,7 @@
         position: absolute;
         right: 47px;
         bottom: 0px;
+        box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
     }
 }
 
@@ -233,14 +229,6 @@
     .main-contacts {
         padding-top: 56px;
         padding-bottom: 73px;
-    }
-
-
-
-    .main-contacts-container {
-        min-width: 1280px;
-        padding-left: 85px;
-        padding-right: 85px;
     }
 
     .main-contacts-name {
