--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -187,22 +187,14 @@
 }
 
 /*---------------MEDIA------------ */
-/* @media screen and (min-width: 414px) {
-  .container {
-    max-width: 384px;
-  }
-} */
-
 @media screen and (min-width: 1024px) {
   .first-hero > .container {
-    max-width: 1024px;
     padding-top: 188px;
     padding-bottom: 15px;
-    padding-left: 47px;
-    padding-right: 47px;
+    /* padding-left: 47px;
+    padding-right: 47px; */
   }
   .first-hero {
-    /* max-width: 1024px; */
     background-image: linear-gradient(
         to right,
         rgba(0, 0, 0, 0.65),
@@ -284,14 +276,12 @@
 
 @media screen and (min-width: 1280px) {
   .first-hero > .container {
-    /* max-width: 1140px; */
     padding-top: 164px;
     padding-bottom: 65px;
-    padding-left: 85px;
-    padding-right: 85px;
+    /* padding-left: 85px;
+    padding-right: 85px; */
   }
   .first-hero {
-    /* max-width: 1140px; */
     background-image: linear-gradient(
         to right,
         rgba(0, 0, 0, 0.65),
@@ -353,7 +343,7 @@
 @media screen and (max-width: 1023px) {
   .mimiho-address {
     position: absolute;
-    right: 16px;
+    right: 15px;
     top: 64px;
   }
 }
