--- a/src/css/aboutrest.css
+++ b/src/css/aboutrest.css
@@ -1,85 +1,134 @@
 /* <!-- -------About our restaurant------- --> */
+/* ==================================== */
+.slider {
+  padding-left: 15px;
+  min-width: 0;
+  overflow: hidden;
+  height: 100%;
+  text-align: center;
+  padding-top: 30px;
+}
+.slider .slick-arrow {
+  position: absolute;
+  bottom: -36px;
+  z-index: 10;
+  font-size: 0;
+  width: 32px;
+  height: 32px;
+  border: none;
+}
+/* Ограничивающая оболочка */
+
+/* Лента слайдов */
+.slick-track {
+  display: flex;
+  gap: 40px;
+}
+
+/* Стрелка влево */
+.slick-arrow.slick-prev {
+  right: 64px;
+  background: url(../img/aboutrest/cil_arrow-left.svg) no-repeat;
+}
+/* Стрелка вправо */
+.slick-arrow.slick-next {
+  right: 0;
+  background: url(../img/aboutrest/cil_arrow-right.svg) 0 0 no-repeat;
+}
+
+/* ===================================== */
 .about-rest {
-   background-color: #fffdee;
+  background-color: #fffdee;
 }
 .about-rest > .container {
-    padding-top: 16px;
-    padding-bottom: 20px;
-    position: relative;
+  padding-top: 16px;
+  padding-bottom: 20px;
+  position: relative;
 }
 .border-one,
 .border-two,
 .border-three,
 .border-four {
-    background-color: #DADADA;
-    box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
-    border-radius: 2px;
+  background-color: #dadada;
+  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+}
+.slider .border-four {
+  box-shadow: 2px 2px 30px 2px rgba(0, 0, 0, 0.25);
 }
 .about-pre-title {
-    font-family: 'Times New Roman';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 1.15;
-    color: #B4B4B4;
-    margin-bottom: 12px;
+  font-family: 'Times New Roman';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.15;
+  color: #b4b4b4;
+  margin-bottom: 12px;
 }
 .about-title {
-    font-family: 'Film P3';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 1.07;
-    letter-spacing: 0.3em;
-    color: #494848;
-    margin-bottom: 12px;
+  font-family: 'Film P3';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.07;
+  letter-spacing: 0.3em;
+  color: #494848;
+  margin-bottom: 12px;
 }
 .about-after-title {
-    width: 258px;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 1.25;
-    letter-spacing: 0.02em;
-    color: var(--primary-text-color);
-    margin-bottom: 28px;
+  width: 258px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  margin-bottom: 28px;
 }
 .about-restaurant {
-    margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 .img-about-rest {
- padding-left: 155px;
- margin-bottom: 32px;
-
+  padding-left: 155px;
+  margin-bottom: 32px;
 }
 .about-pexels {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 32px;   
+  display: flex;
+  gap: 20px;
+  margin-bottom: 300px;
 }
 .about-text {
-    width: 163px;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 1.25;
-    letter-spacing: 0.02em;
-    color: var(--first-gold-color);
-    margin-top: 70px;
+  width: 163px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: var(--first-gold-color);
+  margin-top: 70px;
 }
 
 .about-img {
-     position: absolute;
-    display: flex;
-    gap: 25px;
-    right: 0;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  width: 600px;
+  height: 315px;
+  min-width: 0;
+  gap: 25px;
+  right: 0;
+  min-width: 0;
   /* margin-bottom: 20px; */
-    
 }
 .about-arrow {
-    display: flex ;
-    gap: 32px;
-    width: 98px;
-    margin-left: auto;
-    margin-top: 297px;
+  display: flex;
+  gap: 32px;
+  width: 98px;
+  margin-left: auto;
+  margin-top: 297px;
+}
+.arrow-btn {
+  width: 98px;
+  background-color: transparent;
+  border: none;
 }
 .about-icon-rest {
   transition: fill var(--timing-function);
@@ -87,7 +136,7 @@
 .about-icon-rest:hover,
 .about-icon-rest:focus,
 .about-icon-rest:active {
-fill: var(--second-gold-color);
+  fill: var(--second-gold-color);
 }
 /* ------- Mob ------- */
 @media screen and (min-width: 414px) {
@@ -107,10 +156,9 @@ fill: var(--second-gold-color);
 
 /* ------- Tab --------- */
 @media screen and (min-width: 1024px) {
-  
   .about-rest > .container {
     min-width: 1024px;
-     padding-top: 120px;
+    padding-top: 120px;
     padding-bottom: 32px;
     padding-left: 47px;
     padding-right: 60px;
@@ -150,7 +198,7 @@ fill: var(--second-gold-color);
   }
 
   .about-text {
-   width: 312px;
+    width: 312px;
     margin-top: 190px;
     font-size: 16px;
     line-height: 1.25;
@@ -159,7 +207,7 @@ fill: var(--second-gold-color);
     position: absolute;
     padding: 0;
     margin: 0;
-     gap: 40px;
+    gap: 40px;
     top: 948px;
     left: 536px;
   }
@@ -173,7 +221,6 @@ fill: var(--second-gold-color);
 
 /* ----- Desc ------*/
 @media screen and (min-width: 1280px) {
-  
   .about-rest > .container {
     min-width: 1280px;
     padding-bottom: 50px;
@@ -181,29 +228,29 @@ fill: var(--second-gold-color);
     padding-right: 85px;
   }
   .border-two {
-     box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+    box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
   }
   .about-after-title {
     width: 518px;
     margin-bottom: 162px;
   }
-   .about-text {
+  .about-text {
     margin-bottom: 119px;
   }
   .about-pexels {
     gap: 32px;
   }
-  .img-about-rest{
+  .img-about-rest {
     top: -33px;
     left: 640px;
   }
-.about-img {
-  top: 903px;
-  left: 647px;
-}
-.about-arrow {
-  /* padding-left: 980px; */
-   margin-top: 143px;
-   margin-left: 1012px;
+  .about-img {
+    top: 903px;
+    left: 647px;
+  }
+  .about-arrow {
+    /* padding-left: 980px; */
+    margin-top: 143px;
+    margin-left: 1012px;
   }
 }
