--- a/src/partials/detailshotel.html
+++ b/src/partials/detailshotel.html
@@ -12,28 +12,28 @@
         <picture>
           <source
             srcset="
-              ../img/details-hotel/details-hotel-food.jpg    1x,
-              ../img/details-hotel/details-hotel-food-2x.jpg 2x
+              ./img/details-hotel/details-hotel-food.jpg    1x,
+              ./img/details-hotel/details-hotel-food-2x.jpg 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ../img/details-hotel/details-hotel-food-tab.jpg    1x,
-              ../img/details-hotel/details-hotel-food-tab-2x.jpg 2x
+              ./img/details-hotel/details-hotel-food-tab.jpg    1x,
+              ./img/details-hotel/details-hotel-food-tab-2x.jpg 2x
             "
             media="(min-width: 1024px)"
           />
           <source
             srcset="
-              ../img/details-hotel/details-hotel-food-mob.jpg    1x,
-              ../img/details-hotel/details-hotel-food-mob-2x.jpg 2x
+              ./img/details-hotel/details-hotel-food-mob.jpg    1x,
+              ./img/details-hotel/details-hotel-food-mob-2x.jpg 2x
             "
             media="(min-width: 320px)"
           />
           <img
             class="details-hotel-img-food"
-            src="../img/details-hotel/details-hotel-food.jpg"
+            src="./img/details-hotel/details-hotel-food.jpg"
             alt="food"
             height="270"
           />
@@ -43,28 +43,28 @@
         <picture>
           <source
             srcset="
-              ../img/details-hotel/details-hotel-room.jpg    1x,
-              ../img/details-hotel/details-hotel-room-2x.jpg 2x
+              ./img/details-hotel/details-hotel-room.jpg    1x,
+              ./img/details-hotel/details-hotel-room-2x.jpg 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ../img/details-hotel/details-hotel-room-tab.jpg    1x,
-              ../img/details-hotel/details-hotel-room-tab-2x.jpg 2x
+              ./img/details-hotel/details-hotel-room-tab.jpg    1x,
+              ./img/details-hotel/details-hotel-room-tab-2x.jpg 2x
             "
             media="(min-width: 1024px)"
           />
           <source
             srcset="
-              ../img/details-hotel/details-hotel-room-mob.jpg    1x,
-              ../img/details-hotel/details-hotel-room-mob-2x.jpg 2x
+              ./img/details-hotel/details-hotel-room-mob.jpg    1x,
+              ./img/details-hotel/details-hotel-room-mob-2x.jpg 2x
             "
             media="(min-width: 320px)"
           />
           <img
             class="details-hotel-img-room"
-            src="../img/details-hotel/details-hotel-room.jpg"
+            src="./img/details-hotel/details-hotel-room.jpg"
             alt="room"
             height="270"
           />
@@ -75,21 +75,21 @@
         <picture>
           <source
             srcset="
-              ../img/details-hotel/details-hotel-reception.jpg    1x,
-              ../img/details-hotel/details-hotel-reception-2x.jpg 2x
+              ./img/details-hotel/details-hotel-reception.jpg    1x,
+              ./img/details-hotel/details-hotel-reception-2x.jpg 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ../img/details-hotel/details-hotel-reception-tab.jpg    1x,
-              ../img/details-hotel/details-hotel-reception-tab-2x.jpg 2x
+              ./img/details-hotel/details-hotel-reception-tab.jpg    1x,
+              ./img/details-hotel/details-hotel-reception-tab-2x.jpg 2x
             "
             media="(min-width: 1024px)"
           />
           <img
             class="details-hotel-img-reception"
-            src="../img/details-hotel/details-hotel-reception.jpg"
+            src="./img/details-hotel/details-hotel-reception.jpg"
             alt="reception"
             height="270"
           />
@@ -98,10 +98,10 @@
     </ul>
     <div class="details-hotel-arrows">
       <svg class="hotel-icon-arrow-left" width="32px" height="32px">
-        <use href="../img/icons.svg#arrow-left"></use>
+        <use href="./img/icons.svg#arrow-left"></use>
       </svg>
       <svg class="hotel-icon-arrow-right" width="32px" height="32px">
-        <use href="../img/icons.svg#arrow-right"></use>
+        <use href="./img/icons.svg#arrow-right"></use>
       </svg>
     </div>
     <div class="details-hotel-btn-link">
