Fixed svg paths and added link anchor
Fixed svg paths and added link anchor

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -9,8 +9,6 @@
 .first-hero {
   color: var(--primary-white-color);
   height: auto;
-  /* margin-left: auto;
-  margin-right: auto; */
   background-color: rgba(0, 0, 0, 0.65);
   background-image: linear-gradient(
       to right,
@@ -76,7 +74,6 @@
 }
 
 .first-hero-subtitle {
-  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 16px;
   line-height: 1.25;
@@ -86,7 +83,7 @@
   margin-bottom: 40px;
 }
 .first-hero-text {
-  font-family: 'Times New Roman';
+  font-family: 'Times New Roman', sans-serif;
   text-align: center;
   font-style: normal;
   text-transform: uppercase;
@@ -104,9 +101,9 @@
   justify-content: center;
 }
 
-.hero-button {
+.hero-button,
+.hero-button-link {
   color: #f3c653;
-  font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -123,7 +120,9 @@
 }
 
 .hero-button:hover,
-.hero-button:focus {
+.hero-button:focus,
+.hero-button-link:hover,
+.hero-button-link:focus {
   background: #ffffff;
   border: 2px solid #f3c653;
 }
@@ -133,7 +132,6 @@
   align-items: center;
   width: auto;
   padding: 8px 11px 9px 11px;
-  font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -191,8 +189,6 @@
   .first-hero > .container {
     padding-top: 188px;
     padding-bottom: 15px;
-    /* padding-left: 47px;
-    padding-right: 47px; */
   }
   .first-hero {
     background-image: linear-gradient(
@@ -278,8 +274,6 @@
   .first-hero > .container {
     padding-top: 164px;
     padding-bottom: 65px;
-    /* padding-left: 85px;
-    padding-right: 85px; */
   }
   .first-hero {
     background-image: linear-gradient(
@@ -332,6 +326,11 @@
   .hero-button-wrap {
     gap: 60px;
   }
+  .hero-button,
+  .hero-button-link {
+    padding-left: 35px;
+    padding-right: 35px;
+  }
   .mimiho-bottom-wrap {
     margin-bottom: 0;
   }
@@ -349,7 +348,8 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .hero-button {
+  .hero-button,
+  .hero-button-link {
     background: #000000;
   }
 }
