--- a/src/partials/hero1.html
+++ b/src/partials/hero1.html
@@ -13,7 +13,7 @@
           rel="noopener noreferrer nofollow"
         >
           <svg class="location-icon" width="24" height="24">
-            <use href="../img/icons.svg#location"></use>
+            <use href="./img/icons.svg#location"></use>
           </svg>
           Україна, м. Полтава,<br />
           вул. Маршала Бірюзова, 15</a
@@ -46,7 +46,7 @@
             rel="noopener noreferrer nofollow"
           >
             <svg class="mimiho-soc-icon" width="24" height="24">
-              <use href="../img/icons.svg#instagram"></use>
+              <use href="./img/icons.svg#instagram"></use>
             </svg>
           </a>
         </li>
@@ -58,7 +58,7 @@
             rel="noopener noreferrer nofollow"
           >
             <svg class="mimiho-soc-icon" width="24" height="24">
-              <use href="../img/icons.svg#facebook"></use>
+              <use href="./img/icons.svg#facebook"></use>
             </svg>
           </a>
         </li>
@@ -70,7 +70,7 @@
             rel="noopener noreferrer nofollow"
           >
             <svg class="mimiho-soc-icon" width="24" height="24">
-              <use href="../img/icons.svg#telegram"></use>
+              <use href="./img/icons.svg#telegram"></use>
             </svg>
           </a>
         </li>
