--- a/src/partials/hero2.html
+++ b/src/partials/hero2.html
@@ -14,7 +14,7 @@
             rel="noopener noreferrer nofollow"
           >
             <svg class="location-icon" width="24" height="24">
-              <use href="../img/icons.svg#location"></use>
+              <use href="./img/icons.svg#location"></use>
             </svg>
             Україна, м. Полтава,<br />
             вул. Маршала Бірюзова, 15</a
@@ -28,13 +28,7 @@
           >
             Забронювати столик
           </button>
-          <button
-            type="button"
-            class="hero-button button js-open-modal"
-            data-modal="modalprice"
-          >
-            Переглянути меню
-          </button>
+          <a class="hero-button-link link" href="#menu">Переглянути меню</a>
         </div>
       </div>
       <div class="mimiho-soc">
@@ -47,7 +41,7 @@
               rel="noopener noreferrer nofollow"
             >
               <svg class="mimiho-soc-icon" width="24" height="24">
-                <use href="../img/icons.svg#instagram"></use>
+                <use href="./img/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
@@ -59,7 +53,7 @@
               rel="noopener noreferrer nofollow"
             >
               <svg class="mimiho-soc-icon" width="24" height="24">
-                <use href="../img/icons.svg#facebook"></use>
+                <use href="./img/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
@@ -71,7 +65,7 @@
               rel="noopener noreferrer nofollow"
             >
               <svg class="mimiho-soc-icon" width="24" height="24">
-                <use href="../img/icons.svg#telegram"></use>
+                <use href="./img/icons.svg#telegram"></use>
               </svg>
             </a>
           </li>
