--- a/src/partials/room1.html
+++ b/src/partials/room1.html
@@ -10,24 +10,24 @@ Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit 
     <div class="room1-img">
         <picture>
             <source
-            srcset="../img/modern-studio-apartment-design-with-bedroom-living-space.jpg 1x,
-            ../img/modern-studio-apartment-design-with-bedroom-living-space-2x.jpg 2x"
+            srcset="./img/modern-studio-apartment-design-with-bedroom-living-space.jpg 1x,
+            ./img/modern-studio-apartment-design-with-bedroom-living-space-2x.jpg 2x"
             media="screen and (min-width:1280px)"
             >
 
             <source
-           srcset="../img/modern-studio-apartment-design-with-bedroom-living-space-tab.jpg 1x,
-            ../img/modern-studio-apartment-design-with-bedroom-living-space-tab-2x.jpg 2x"
+           srcset="./img/modern-studio-apartment-design-with-bedroom-living-space-tab.jpg 1x,
+            ./img/modern-studio-apartment-design-with-bedroom-living-space-tab-2x.jpg 2x"
             media="screen and (min-width:1024px)"
             >
 
             <source
-            srcset="../img/modern-studio-apartment-design-with-bedroom-living-space-mobile.jpg 1x,
-            ../img/modern-studio-apartment-design-with-bedroom-living-space-mobile-2x.jpg 2x"
+            srcset="./img/modern-studio-apartment-design-with-bedroom-living-space-mobile.jpg 1x,
+            ./img/modern-studio-apartment-design-with-bedroom-living-space-mobile-2x.jpg 2x"
             media="screen and (max-width:1023px)"
             >
             <img
-        src="../img/modern-studio-apartment-design-with-bedroom-living-space.jpg"
+        src="./img/modern-studio-apartment-design-with-bedroom-living-space.jpg"
         alt="Фото трьохмісного номеру"
       />
         </picture>
@@ -37,24 +37,24 @@ Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit 
         <li class="room1-slaider-item">
         <picture>
             <source
-            srcset="../img/arrangement-pf-bathroom-elements-self-care.jpg 1x,
-            ../img/arrangement-pf-bathroom-elements-self-care-2x.jpg 2x"
+            srcset="./img/arrangement-pf-bathroom-elements-self-care.jpg 1x,
+            ./img/arrangement-pf-bathroom-elements-self-care-2x.jpg 2x"
             media="screen and (min-width:1280px)"
             >
             
             <source
-           srcset="../img/arrangement-pf-bathroom-elements-self-care-tab.jpg 1x,
-            ../img/arrangement-pf-bathroom-elements-self-care-tab-2x.jpg 2x"
+           srcset="./img/arrangement-pf-bathroom-elements-self-care-tab.jpg 1x,
+            ./img/arrangement-pf-bathroom-elements-self-care-tab-2x.jpg 2x"
             media="screen and (min-width:1024px)"
             >
 
             <source
-            srcset="../img/arrangement-pf-bathroom-elements-self-care-mobile.jpg 1x,
-            ../img/arrangement-pf-bathroom-elements-self-care-mobile-2x.jpg 2x"
+            srcset="./img/arrangement-pf-bathroom-elements-self-care-mobile.jpg 1x,
+            ./img/arrangement-pf-bathroom-elements-self-care-mobile-2x.jpg 2x"
             media="screen and (max-width:1023px)"
             >
             <img
-        src="../img/arrangement-pf-bathroom-elements-self-care.jpg"
+        src="./img/arrangement-pf-bathroom-elements-self-care.jpg"
         alt="Фото ванної кімнати"
 
       />
@@ -64,24 +64,24 @@ Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit 
         <li class="room1-slaider-item">
                 <picture>
                         <source
-            srcset="../img/cup-tea-stands-wooden-windowsill.jpg 1x,
-            ../img/cup-tea-stands-wooden-windowsill-2x.jpg 2x"
+            srcset="./img/cup-tea-stands-wooden-windowsill.jpg 1x,
+            ./img/cup-tea-stands-wooden-windowsill-2x.jpg 2x"
             media="screen and (min-width:1280px)"
             >
             
             <source
-           srcset="../img/arrangement-pf-bathroom-elements-self-care-tab.jpg 1x,
-            ../img/cup-tea-stands-wooden-windowsill-tab-2x.jpg 2x"
+           srcset="./img/arrangement-pf-bathroom-elements-self-care-tab.jpg 1x,
+            ./img/cup-tea-stands-wooden-windowsill-tab-2x.jpg 2x"
             media="screen and (min-width:1024px)"
             >
 
             <source
-            srcset="../img/cup-tea-stands-wooden-windowsill-mobile.jpg 1x,
-            ../img/cup-tea-stands-wooden-windowsill-mobile-2x.jpg 2x"
+            srcset="./img/cup-tea-stands-wooden-windowsill-mobile.jpg 1x,
+            ./img/cup-tea-stands-wooden-windowsill-mobile-2x.jpg 2x"
             media="screen and (max-width:1023px)"
             >
             <img
-        src="../img/cup-tea-stands-wooden-windowsill.jpg"
+        src="./img/cup-tea-stands-wooden-windowsill.jpg"
         alt="Фото вигляд з вікна"
 
       />
@@ -92,13 +92,13 @@ Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit 
 <div class="room1-arrow">
             <button type="button" class="room1-arrow-btn">
       <svg width="32" height="32">
-        <use href="../img/icons.svg#arrow-left"></use>
+        <use href="./img/icons.svg#arrow-left"></use>
       </svg>
          </button>
 
          <button type="button" class="room1-arrow-btn">
       <svg width="32" height="32">
-        <use href="../img/icons.svg#arrow-right"></use>
+        <use href="./img/icons.svg#arrow-right"></use>
       </svg>
     </button>
 </div>
@@ -106,7 +106,7 @@ Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit 
 
 
 <div class="room1-wrap">
-        <a href="../room.html" class="room1-btn">Детальніше</a>
+        <a href="./room.html" class="room1-btn">Детальніше</a>
 
         <button type="button" class="room1-btn js-open-modal" data-modal="modalprice">Переглянути ціни</button>
 </div>
