--- a/src/css/aboutrest.css
+++ b/src/css/aboutrest.css
@@ -53,8 +53,11 @@
   box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
   border-radius: 2px;
 }
-.slider .border-four {
-  box-shadow: 2px 2px 30px 2px rgba(0, 0, 0, 0.25);
+.slider .slick-acrive .border-one,
+.border-two,
+.border-three,
+.border-four {
+  box-shadow: 2px 2px 40px 2px rgba(0, 0, 0, 0.25);
 }
 .about-pre-title {
   font-family: 'Times New Roman';
@@ -138,6 +141,7 @@
 .about-icon-rest:active {
   fill: var(--second-gold-color);
 }
+
 /* ------- Mob ------- */
 @media screen and (min-width: 414px) {
   .about-rest > .container {
