--- a/src/css/aboutrest.css
+++ b/src/css/aboutrest.css
@@ -71,11 +71,9 @@
     display: flex;
     gap: 25px;
     right: 0;
-  /* margin-bottom: 20px; */
-    
 }
 .about-arrow {
-    display: flex ;
+    display: flex;
     gap: 32px;
     width: 98px;
     margin-left: auto;
@@ -109,8 +107,8 @@ fill: var(--second-gold-color);
 @media screen and (min-width: 1024px) {
   
   .about-rest > .container {
-    min-width: 1024px;
-     padding-top: 120px;
+    width: 1024px;
+    padding-top: 120px;
     padding-bottom: 32px;
     padding-left: 47px;
     padding-right: 60px;
@@ -140,6 +138,7 @@ fill: var(--second-gold-color);
   }
   .about-pexels {
     gap: 48px;
+    padding-right: 207px;
   }
   .img-about-rest {
     position: absolute;
@@ -166,7 +165,6 @@ fill: var(--second-gold-color);
 
   .about-arrow {
     margin-top: 198px;
-    /* padding-left: 790px; */
     margin-left: 819px;
   }
 }
@@ -175,7 +173,7 @@ fill: var(--second-gold-color);
 @media screen and (min-width: 1280px) {
   
   .about-rest > .container {
-    min-width: 1280px;
+    width: 1280px;
     padding-bottom: 50px;
     padding-left: 85px;
     padding-right: 85px;
@@ -192,6 +190,7 @@ fill: var(--second-gold-color);
   }
   .about-pexels {
     gap: 32px;
+    padding-right: 306px;
   }
   .img-about-rest{
     top: -33px;
@@ -202,7 +201,6 @@ fill: var(--second-gold-color);
   left: 647px;
 }
 .about-arrow {
-  /* padding-left: 980px; */
    margin-top: 143px;
    margin-left: 1012px;
   }
