--- a/src/partials/hero3.html
+++ b/src/partials/hero3.html
@@ -6,7 +6,8 @@
             <h1 class="hero-title">MIMIH<span class="accent">O</span></h1>
             <h2 class="hero-sub-title">Готель</h2>
             <div class="local-div">
-                <a href="https://goo.gl/maps/mcsi6WdrQmKkDymHA" class="location">
+                <a href="https://goo.gl/maps/mcsi6WdrQmKkDymHA" class="location link" target="_blank"
+          rel="noopener noreferrer nofollow">
                     <svg class="location-icon" width="20" height="20">
                         <use href="../img/icons.svg#location"></use>
                     </svg>Україна, м.Полтава, <br> вул. Маршала Бірюзова, 15
