--- a/src/partials/aboutkitchen.html
+++ b/src/partials/aboutkitchen.html
@@ -100,5 +100,76 @@
         veniam consequat sunt nostrud amet.
       </p>
     </div>
+    <div class="pexels-slider">
+      <ul class="slider-pic">
+        <li class="slider-item">
+          <picture>
+            <source
+              srcset="
+                ./img/helena-lopes-desktop.jpg    1x,
+                ./img/helena-lopes-desktop-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source srcset="
+            ./img/helena-lopes-tablet.jpg    1x,
+            ./img/helena-lopes-tablet-2x.jpg 2x
+          "
+          media="(min-width: 1024px)"
+          />
+            <source 
+            srcset="
+                ./img/helena-lopes-mobile.jpg    1x,
+                ./img/helena-lopes-mobile-2x.jpg 2x
+              "
+              media="(min-width: 320px)"
+              />
+    
+            <img
+              src="./img/helena-lopes-mobile.jpg"
+              alt="helena-lopes"
+              srcset="
+                ./img/helena-lopes-mobile.jpg    1x,
+                ./img/helena-lopes-mobile.jpg-2x 2x
+              "
+              
+            />
+        </li>
+
+        <li class="slider-item">
+          <picture>
+            <source
+              srcset="
+                ./img/mat-brown-desktop.jpg    1x,
+                ./img/mat-brown-desktop-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source srcset="
+            ./img/mat-brown-tablet.jpg    1x,
+            ./img/mat-brown-tablet-2x.jpg 2x
+          "
+          media="(min-width: 1024px)"
+          />
+            <source 
+            srcset="
+                ./img/mat-brown-mobile.jpg    1x,
+                ./img/mat-brown-mobile-2x.jpg 2x
+              "
+              media="(min-width: 320px)"
+              />
+    
+            <img
+              src="./img/mat-brown-mobile.jpg"
+              alt="mat-brown"
+              srcset="
+                ./img/mat-brown-mobile.jpg    1x,
+                ./img/mat-brown-mobile.jpg-2x 2x
+              "
+              
+            />
+        </li>
+      </ul>
+    </div>
   </section>
 </body>
