--- a/src/partials/detailshotel.html
+++ b/src/partials/detailshotel.html
@@ -97,10 +97,10 @@
       </li>
     </ul>
     <div class="details-hotel-arrows">
-      <svg class="hotel-icon-arrow-left" width="32px" height="32px">
+      <svg width="32px" height="32px">
         <use href="./img/icons.svg#arrow-left"></use>
       </svg>
-      <svg class="hotel-icon-arrow-right" width="32px" height="32px">
+      <svg width="32px" height="32px">
         <use href="./img/icons.svg#arrow-right"></use>
       </svg>
     </div>
