--- a/src/css/amenities.css
+++ b/src/css/amenities.css
@@ -43,8 +43,6 @@
 .amenities-room-btn-link {
 }
 .amenities-button {
-  width: 384px;
-  height: 64px;
   font-family: inherit;
   font-style: normal;
   font-weight: 500;
@@ -54,7 +52,7 @@
   background-color: #000000;
   border: 1px solid var(--second-gold-color);
   border-radius: 25px;
-  padding: 0;
+  padding: 20px 42px;
   margin-top: 32px;
   margin-bottom: 20px;
   cursor: pointer;
@@ -122,11 +120,9 @@
     align-items: flex-end;
   }
   .amenities-button {
-    width: 434px;
-    height: 64px;
     font-size: 24px;
     line-height: 1.2;
-    padding: 0;
+    padding: 18px 38px;
     margin-top: 40px;
     margin-bottom: 32px;
   }
